@@ -839,6 +839,12 @@ Extension Modules
 Tests
 -----
 
+- Issue #5354: New test support function import_fresh_module() makes
+  it easy to import both normal and optimised versions of modules.
+  test_heapq and test_warnings have been adjusted to use it, tests for
+  other modules with both C and Python implementations in the stdlib
+  can be adjusted to use it over time.
+
 - Fix test_warnings to no longer reset the warnings filter.
 
 - Fix test_logging to no longer reset the warnings filter.
